--- a/config-yml/search_api.index.solr_newspapers_lib_unb_ca.yml
+++ b/config-yml/search_api.index.solr_newspapers_lib_unb_ca.yml
@@ -8,19 +8,19 @@ dependencies:
     - search_api
     - node
   config:
+    - field.storage.node.field_place_of_publication
     - field.storage.node.field_additional_indexed_text
     - field.storage.node.field_description
-    - field.storage.node.field_place_of_publication
-    - field.storage.node.field_family
     - field.storage.node.field_first_issue_date
     - field.storage.node.field_frequency
     - field.storage.node.field_issn
     - field.storage.node.field_oclc
-    - field.storage.node.field_publisher
     - field.storage.node.field_sort_title
     - field.storage.node.field_subject_notes
     - field.storage.node.field_subjects
     - field.storage.node.field_title_notes
+    - field.storage.node.field_family
+    - field.storage.node.field_publisher
     - search_api.server.solr_newspapers_lib_unb_ca
 third_party_settings:
   search_api_solr:
@@ -48,14 +48,6 @@ field_settings:
     dependencies:
       config:
         - field.storage.node.field_place_of_publication
-  aggregated_field:
-    label: 'Aggregated Place of Publication'
-    property_path: aggregated_field
-    type: string
-    configuration:
-      type: union
-      fields:
-        - 'entity:node/field_place_of_publication'
   country_name:
     label: 'Place of Publication » The full name of the country.'
     datasource_id: 'entity:node'
@@ -120,14 +112,6 @@ field_settings:
     dependencies:
       config:
         - field.storage.node.field_oclc
-  field_sort_province:
-    label: 'Sortable place of publication'
-    datasource_id: 'entity:node'
-    property_path: 'field_place_of_publication:administrative_area_name'
-    type: string
-    dependencies:
-      config:
-        - field.storage.node.field_place_of_publication
   field_sort_title:
     label: 'Sortable title'
     datasource_id: 'entity:node'
@@ -203,6 +187,14 @@ field_settings:
     indexed_locked: true
     type_locked: true
     hidden: true
+  sort_locality:
+    label: 'Sortable locality (i.e. city).'
+    datasource_id: 'entity:node'
+    property_path: 'field_place_of_publication:locality'
+    type: string
+    dependencies:
+      config:
+        - field.storage.node.field_place_of_publication
   status:
     label: Published
     datasource_id: 'entity:node'
