--- a/config-yml/views.view.search.yml
+++ b/config-yml/views.view.search.yml
@@ -84,10 +84,7 @@ display:
           columns:
             field_sort_title: field_sort_title
             field_place_of_publication: field_place_of_publication
-            country_name_facet: country_name_facet
-            locality_facet: locality_facet
-            administrative_area_name_facet: administrative_area_name_facet
-            field_sort_province: field_sort_province
+            sort_locality: sort_locality
           info:
             field_sort_title:
               sortable: true
@@ -101,28 +98,7 @@ display:
               separator: ''
               empty_column: false
               responsive: ''
-            country_name_facet:
-              sortable: false
-              default_sort_order: asc
-              align: ''
-              separator: ''
-              empty_column: false
-              responsive: ''
-            locality_facet:
-              sortable: false
-              default_sort_order: asc
-              align: ''
-              separator: ''
-              empty_column: false
-              responsive: ''
-            administrative_area_name_facet:
-              sortable: false
-              default_sort_order: asc
-              align: ''
-              separator: ''
-              empty_column: false
-              responsive: ''
-            field_sort_province:
+            sort_locality:
               sortable: true
               default_sort_order: asc
               align: ''
@@ -170,15 +146,15 @@ display:
             trim: false
             preserve_tags: ''
             html: false
-          element_type: ''
+          element_type: '0'
           element_class: ''
           element_label_type: ''
           element_label_class: ''
           element_label_colon: true
           element_wrapper_type: ''
           element_wrapper_class: ''
-          element_default_classes: true
-          empty: ''
+          element_default_classes: false
+          empty: '<span class="text-muted">Title undefined</span>'
           hide_empty: false
           empty_zero: false
           hide_alter_empty: true
@@ -274,169 +250,10 @@ display:
             multi_separator: ', '
           entity_type: node
           plugin_id: search_api_field
-        country_name_facet:
-          id: country_name_facet
+        sort_locality:
+          id: sort_locality
           table: search_api_index_solr_newspapers_lib_unb_ca
-          field: country_name_facet
-          relationship: none
-          group_type: group
-          admin_label: ''
-          label: ''
-          exclude: true
-          alter:
-            alter_text: false
-            text: ''
-            make_link: false
-            path: ''
-            absolute: false
-            external: false
-            replace_spaces: false
-            path_case: none
-            trim_whitespace: false
-            alt: ''
-            rel: ''
-            link_class: ''
-            prefix: ''
-            suffix: ''
-            target: ''
-            nl2br: false
-            max_length: 0
-            word_boundary: true
-            ellipsis: true
-            more_link: false
-            more_link_text: ''
-            more_link_path: ''
-            strip_tags: false
-            trim: false
-            preserve_tags: ''
-            html: false
-          element_type: ''
-          element_class: ''
-          element_label_type: ''
-          element_label_class: ''
-          element_label_colon: false
-          element_wrapper_type: ''
-          element_wrapper_class: ''
-          element_default_classes: true
-          empty: ''
-          hide_empty: false
-          empty_zero: false
-          hide_alter_empty: true
-          link_to_item: false
-          use_highlighting: false
-          multi_type: separator
-          multi_separator: ', '
-          plugin_id: search_api
-        locality_facet:
-          id: locality_facet
-          table: search_api_index_solr_newspapers_lib_unb_ca
-          field: locality_facet
-          relationship: none
-          group_type: group
-          admin_label: ''
-          label: ''
-          exclude: true
-          alter:
-            alter_text: false
-            text: ''
-            make_link: false
-            path: ''
-            absolute: false
-            external: false
-            replace_spaces: false
-            path_case: none
-            trim_whitespace: false
-            alt: ''
-            rel: ''
-            link_class: ''
-            prefix: ''
-            suffix: ''
-            target: ''
-            nl2br: false
-            max_length: 0
-            word_boundary: true
-            ellipsis: true
-            more_link: false
-            more_link_text: ''
-            more_link_path: ''
-            strip_tags: false
-            trim: false
-            preserve_tags: ''
-            html: false
-          element_type: ''
-          element_class: ''
-          element_label_type: ''
-          element_label_class: ''
-          element_label_colon: false
-          element_wrapper_type: ''
-          element_wrapper_class: ''
-          element_default_classes: true
-          empty: ''
-          hide_empty: false
-          empty_zero: false
-          hide_alter_empty: true
-          link_to_item: false
-          use_highlighting: false
-          multi_type: separator
-          multi_separator: ', '
-          plugin_id: search_api
-        administrative_area_name_facet:
-          id: administrative_area_name_facet
-          table: search_api_index_solr_newspapers_lib_unb_ca
-          field: administrative_area_name_facet
-          relationship: none
-          group_type: group
-          admin_label: ''
-          label: ''
-          exclude: true
-          alter:
-            alter_text: false
-            text: '{{ country_name_facet }}'
-            make_link: false
-            path: ''
-            absolute: false
-            external: false
-            replace_spaces: false
-            path_case: none
-            trim_whitespace: false
-            alt: ''
-            rel: ''
-            link_class: ''
-            prefix: ''
-            suffix: ''
-            target: ''
-            nl2br: false
-            max_length: 0
-            word_boundary: true
-            ellipsis: true
-            more_link: false
-            more_link_text: ''
-            more_link_path: ''
-            strip_tags: false
-            trim: false
-            preserve_tags: ''
-            html: false
-          element_type: ''
-          element_class: ''
-          element_label_type: ''
-          element_label_class: ''
-          element_label_colon: false
-          element_wrapper_type: ''
-          element_wrapper_class: ''
-          element_default_classes: true
-          empty: '{{ country_name_facet }}'
-          hide_empty: false
-          empty_zero: false
-          hide_alter_empty: true
-          link_to_item: false
-          use_highlighting: false
-          multi_type: separator
-          multi_separator: ', '
-          plugin_id: search_api
-        field_sort_province:
-          id: field_sort_province
-          table: search_api_index_solr_newspapers_lib_unb_ca
-          field: field_sort_province
+          field: sort_locality
           relationship: none
           group_type: group
           admin_label: ''
@@ -477,7 +294,7 @@ display:
           element_wrapper_type: ''
           element_wrapper_class: ''
           element_default_classes: true
-          empty: '<small class="text-muted"><i class="glyphicon glyphicon-warning-sign"></i>&nbsp;Undefined</small>'
+          empty: '<small class="text-muted"><i class="glyphicon glyphicon-warning-sign"></i> Undefined</small>'
           hide_empty: false
           empty_zero: false
           hide_alter_empty: true
