--- a/config-yml/views.view.search.yml
+++ b/config-yml/views.view.search.yml
@@ -88,6 +88,10 @@ display:
             field_sort_title: field_sort_title
             field_place_of_publication: field_place_of_publication
             sort_locality: sort_locality
+            field_first_issue_search_date: field_first_issue_search_date
+            field_last_issue_search_date: field_last_issue_search_date
+            field_first_issue_search_date_1: field_first_issue_search_date_1
+            field_last_issue_search_date_1: field_last_issue_search_date_1
           info:
             field_sort_title:
               sortable: true
@@ -102,6 +106,30 @@ display:
               empty_column: false
               responsive: ''
             sort_locality:
+              sortable: true
+              default_sort_order: asc
+              align: ''
+              separator: ''
+              empty_column: false
+              responsive: ''
+            field_first_issue_search_date:
+              align: ''
+              separator: ''
+              empty_column: false
+              responsive: ''
+            field_last_issue_search_date:
+              align: ''
+              separator: ''
+              empty_column: false
+              responsive: ''
+            field_first_issue_search_date_1:
+              sortable: true
+              default_sort_order: asc
+              align: ''
+              separator: ''
+              empty_column: false
+              responsive: ''
+            field_last_issue_search_date_1:
               sortable: true
               default_sort_order: asc
               align: ''
@@ -306,9 +334,9 @@ display:
           multi_type: separator
           multi_separator: ', '
           plugin_id: search_api
-        field_first_issue_search_date:
-          id: field_first_issue_search_date
-          table: search_api_datasource_solr_newspapers_lib_unb_ca_entity_node
+        field_first_issue_search_date_1:
+          id: field_first_issue_search_date_1
+          table: search_api_index_solr_newspapers_lib_unb_ca
           field: field_first_issue_search_date
           relationship: none
           group_type: group
@@ -376,11 +404,10 @@ display:
             use_highlighting: false
             multi_type: separator
             multi_separator: ', '
-          entity_type: node
           plugin_id: search_api_field
-        field_last_issue_search_date:
-          id: field_last_issue_search_date
-          table: search_api_datasource_solr_newspapers_lib_unb_ca_entity_node
+        field_last_issue_search_date_1:
+          id: field_last_issue_search_date_1
+          table: search_api_index_solr_newspapers_lib_unb_ca
           field: field_last_issue_search_date
           relationship: none
           group_type: group
@@ -448,7 +475,6 @@ display:
             use_highlighting: false
             multi_type: separator
             multi_separator: ', '
-          entity_type: node
           plugin_id: search_api_field
       filters:
         search_api_fulltext:
