--- a/config-yml/search_api.index.solr_newspapers_lib_unb_ca.yml
+++ b/config-yml/search_api.index.solr_newspapers_lib_unb_ca.yml
@@ -15,6 +15,7 @@ dependencies:
     - field.storage.node.field_first_issue_date
     - field.storage.node.field_first_issue_search_date
     - field.storage.node.field_frequency
+    - field.storage.node.field_frequency_notes
     - field.storage.node.field_issn
     - field.storage.node.field_last_issue_search_date
     - field.storage.node.field_oclc
@@ -23,6 +24,8 @@ dependencies:
     - field.storage.node.field_subject_notes
     - field.storage.node.field_subjects
     - field.storage.node.field_title_notes
+    - field.storage.node.field_last_issue_approx_date
+    - field.storage.node.field_first_issue_approx_date
     - search_api.server.solr_newspapers_lib_unb_ca
 third_party_settings:
   search_api_solr:
@@ -82,6 +85,14 @@ field_settings:
     dependencies:
       config:
         - field.storage.node.field_description
+  field_first_issue_approx_date:
+    label: 'Verbatim date'
+    datasource_id: 'entity:node'
+    property_path: field_first_issue_approx_date
+    type: text
+    dependencies:
+      config:
+        - field.storage.node.field_first_issue_approx_date
   field_first_issue_date:
     label: 'First Issue Date Range'
     datasource_id: 'entity:node'
@@ -106,6 +117,14 @@ field_settings:
     dependencies:
       config:
         - field.storage.node.field_frequency
+  field_frequency_notes:
+    label: 'Frequency Notes'
+    datasource_id: 'entity:node'
+    property_path: field_frequency_notes
+    type: text
+    dependencies:
+      config:
+        - field.storage.node.field_frequency_notes
   field_issn:
     label: ISSN
     datasource_id: 'entity:node'
@@ -114,6 +133,14 @@ field_settings:
     dependencies:
       config:
         - field.storage.node.field_issn
+  field_last_issue_approx_date:
+    label: 'Verbatim date'
+    datasource_id: 'entity:node'
+    property_path: field_last_issue_approx_date
+    type: text
+    dependencies:
+      config:
+        - field.storage.node.field_last_issue_approx_date
   field_last_issue_search_date:
     label: 'Last Issue Search Date'
     datasource_id: 'entity:node'
@@ -126,7 +153,7 @@ field_settings:
     label: OCLC
     datasource_id: 'entity:node'
     property_path: field_oclc
-    type: string
+    type: text
     dependencies:
       config:
         - field.storage.node.field_oclc
