NBNP-45 Sort View search by sort title/display standard title

--- a/config-yml/views.view.search.yml
+++ b/config-yml/views.view.search.yml
@@ -88,8 +88,6 @@ display:
             field_sort_title: field_sort_title
             field_place_of_publication: field_place_of_publication
             sort_locality: sort_locality
-            field_first_issue_search_date: field_first_issue_search_date
-            field_last_issue_search_date: field_last_issue_search_date
             field_first_issue_search_date_1: field_first_issue_search_date_1
             field_last_issue_search_date_1: field_last_issue_search_date_1
           info:
@@ -108,16 +106,6 @@ display:
             sort_locality:
               sortable: true
               default_sort_order: asc
-              align: ''
-              separator: ''
-              empty_column: false
-              responsive: ''
-            field_first_issue_search_date:
-              align: ''
-              separator: ''
-              empty_column: false
-              responsive: ''
-            field_last_issue_search_date:
               align: ''
               separator: ''
               empty_column: false
@@ -141,6 +129,77 @@ display:
       row:
         type: fields
       fields:
+        title:
+          id: title
+          table: search_api_datasource_solr_newspapers_lib_unb_ca_entity_node
+          field: title
+          relationship: none
+          group_type: group
+          admin_label: ''
+          label: Title
+          exclude: true
+          alter:
+            alter_text: false
+            text: ''
+            make_link: false
+            path: ''
+            absolute: false
+            external: false
+            replace_spaces: false
+            path_case: none
+            trim_whitespace: false
+            alt: ''
+            rel: ''
+            link_class: ''
+            prefix: ''
+            suffix: ''
+            target: ''
+            nl2br: false
+            max_length: 0
+            word_boundary: true
+            ellipsis: true
+            more_link: false
+            more_link_text: ''
+            more_link_path: ''
+            strip_tags: false
+            trim: false
+            preserve_tags: ''
+            html: false
+          element_type: ''
+          element_class: ''
+          element_label_type: ''
+          element_label_class: ''
+          element_label_colon: true
+          element_wrapper_type: ''
+          element_wrapper_class: ''
+          element_default_classes: true
+          empty: ''
+          hide_empty: false
+          empty_zero: false
+          hide_alter_empty: true
+          click_sort_column: value
+          type: string
+          settings:
+            link_to_entity: false
+          group_column: value
+          group_columns: {  }
+          group_rows: true
+          delta_limit: 0
+          delta_offset: 0
+          delta_reversed: false
+          delta_first_last: false
+          multi_type: separator
+          separator: ', '
+          field_api_classes: false
+          field_rendering: true
+          fallback_handler: search_api
+          fallback_options:
+            link_to_item: false
+            use_highlighting: false
+            multi_type: separator
+            multi_separator: ', '
+          entity_type: node
+          plugin_id: search_api_field
         field_sort_title:
           id: field_sort_title
           table: search_api_index_solr_newspapers_lib_unb_ca
@@ -151,8 +210,8 @@ display:
           label: Title
           exclude: false
           alter:
-            alter_text: false
-            text: ''
+            alter_text: true
+            text: '{{ title }}'
             make_link: false
             path: ''
             absolute: false
@@ -532,10 +591,10 @@ display:
           expose:
             label: ''
           plugin_id: search_api
-        title:
-          id: title
+        field_sort_title:
+          id: field_sort_title
           table: search_api_index_solr_newspapers_lib_unb_ca
-          field: title
+          field: field_sort_title
           relationship: none
           group_type: group
           admin_label: ''
