NBNP-40 Move to title ngram index type (also improves autocomplete)

--- a/config-yml/search_api.index.solr_newspapers_lib_unb_ca.yml
+++ b/config-yml/search_api.index.solr_newspapers_lib_unb_ca.yml
@@ -251,7 +251,7 @@ field_settings:
     label: Title
     datasource_id: 'entity:node'
     property_path: title
-    type: solr_text_phonetic
+    type: solr_text_ngram
     boost: !!float 13
   uid:
     label: uid
