--- a/custom/modules/digital_serial/modules/digital_serial_issue/digital_serial_issue.routing.yml
+++ b/custom/modules/digital_serial/modules/digital_serial_issue/digital_serial_issue.routing.yml
@@ -23,7 +23,7 @@ entity.digital_serial_issue.canonical:
 digital_serial_issue.title_issues:
   path: '/serials/{digital_serial_title}/issues'
   defaults:
-    _title_callback: '\Drupal\digital_serial_title\Controller\NewspaperPublicationDigitalTitleListTitleController::getTitleIssuesTitle'
+    _title: NULL
     _form: '\Drupal\digital_serial_issue\Form\DigitalSerialIssueListForm'
   requirements:
     _permission: 'view published serial issue entities'
