NBNP-52 Map the SortTitle during migration

--- a/tests/visual-regression/visreg_content/config/install/migrate_plus.migration.0_visreg_content_microforms_titles.yml
+++ b/tests/visual-regression/visreg_content/config/install/migrate_plus.migration.0_visreg_content_microforms_titles.yml
@@ -142,6 +142,7 @@ process:
   field_previous_identifications: uuid
   field_title_notes: title_notes
   title: title
+  field_sort_title: sort_title
 
 destination:
   plugin: entity:node
